--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,11 +18,14 @@
     "@angular/compiler": "17.2.4",
     "@angular/core": "17.2.4",
     "@angular/forms": "17.2.4",
+    "@angular/localize": "^17.2.4",
     "@angular/platform-browser": "17.2.4",
     "@angular/platform-browser-dynamic": "17.2.4",
     "@angular/router": "17.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "2.11.8",
     "angular-in-memory-web-api": "~0.17.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -44,6 +47,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.9.3"
+    "typescript": "~5.3.3"
   }
 }
